--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "11.0.1",
     "next-connect": "^0.10.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "7.31.0",
